--- a/index.css
+++ b/index.css
@@ -1,8 +1,18 @@
-table {
-  box-sizing: border-box;
-  width: 300px;
-  text-align: left;
-  border: 1px solid gray;
+body {
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Baloo Bhai', cursive;
+}
+
+#root {
+  justify-self: center;
 }
 
 .searchbar {
@@ -13,12 +23,42 @@ table {
   padding-top: 20px;
 } 
 
+table {
+  box-sizing: border-box;
+  width: 300px;
+  text-align: left;
+  border: 1px solid gray;
+}
+
 table tbody th {
+  color: #fff;
   text-align: center;
   background: gray;
-} 
+  letter-spacing: 1.5px;
+}
 
-#root12_ > div {
-  display: grid;
-  justify-content: center;
+h3 {
+  text-align: center;
+  margin-bottom: 0;
+  margin-block-end: 0;
+}
+
+pre {
+  font-size: 10px;
+}
+
+a {
+  text-align: center;
+}
+
+button {
+  color: white;
+  background: rgb(82, 82, 82);
+  padding: 20px;
+  border: none;
+  outline: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
