--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   display: grid;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   align-content: center;
   font-family: 'Roboto', sans-serif;
